# stalearr

./: .dockerignore  .env.example  .gitignore  ALGORITHM.md  Dockerfile  LICENSE  README.md  compose.yml  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: condition-matrix-design.md  optimizer-design.md
optimizarr/: __main__.py  config.py  defaults.toml  http.py  optimizer.py  radarr.py  sonarr.py  state.py  topsis.py
optimizarr/arr/: __init__.py  base.py  radarr.py  sonarr.py
optimizarr/features/optimizer/: config.py  decision.py  topsis.py  transitions.py  worker.py
optimizarr/features/unmonitor/: candidates.py  config.py  worker.py
script/: install-uv.sh
stalearr/: __main__.py  config.py  dates.py  http.py  radarr.py  sonarr.py
tests/: test_arr.py  test_config.py  test_dates.py  test_decision.py  test_http.py  test_optimizer.py  test_radarr.py  test_sonarr.py  test_state.py  test_topsis.py  test_transitions.py  test_unmonitor.py  test_worker.py
tools/: debug_queue.py  weight_lab.py
