[project]
name = "optimizarr"
description = "TOPSIS-based release optimizer for Radarr/Sonarr, plus a configurable unmonitor job."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "croniter>=6.2.2",
]
dynamic = ["version"]

[tool.hatch.version]
path = "optimizarr/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
venvPath = "."
venv = ".venv"
